--- a/docs/applications/emby.mdx
+++ b/docs/applications/emby.mdx
@@ -43,28 +43,9 @@ Emby is now connected!
 
 Like all box configured applications, you can manage emby via SSH with box with start, stop, restart, enable and disable commands.
 
-<!--DOCUSAURUS_CODE_TABS-->
-<!--Start-->
-```plaintext
-box start emby
-```
-<!--Stop-->
-```plaintext
-box stop emby
-```
-<!--Restart-->
-```plaintext
-box restart emby
-```
-<!--Enable-->
-```plaintext
-box enable emby
-```
-<!--Disable-->
-```plaintext
-box disable emby
-```
-<!--END_DOCUSAURUS_CODE_TABS-->
+import SystemdTabs from '../snippets/systemdtabs.mdx';
+
+<SystemdTabs service="emby"/>
 
 ## Configuration
 
