--- a/docs/applications/radarr.mdx
+++ b/docs/applications/radarr.mdx
@@ -1,74 +1,53 @@
 ---
-id: sonarr
-title: Sonarr
-sidebar_label: Sonarr
+id: radarr
+title: Radarr
+sidebar_label: Radarr
 ---
 
-Sonarr is a PVR for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new episodes of your favorite shows and will grab, sort and rename them. It can also be configured to automatically upgrade the quality of files already downloaded when a better quality format becomes available.
+Radarr is an independent fork of Sonarr reworked for automatically downloading movies via Usenet and BitTorrent.
 
 ## Initial Setup
 
 First you must connect to your slot via ssh. If you need help connecting to the server, please read the help article [here](../getting-started/how-do-i-connect.md).
 
-Installing Sonarr is easy. Simply issue the following command:
+Installing Radarr is easy. Simply issue the following command:
 
 ```plaintext main
-box install sonarr
+box install radarr
 ```
 
-This command will configure sonarr for your user.
+This command will configure radarr for your user.
 
 ## How to Access
 
-Once setup, sonarr will be available at the link `https://<hostname.io>/sonarr`
-
+After Radarr has been installed, it will be available for access at `https://<hostname.io>/radarr`.
 
 ## Service Management
 
-Like all box configured applications, you can manage Sonarr via SSH with box with start, stop, restart, enable and disable commands.
+Like all box configured applications, you can manage Radarr via SSH with box with start, stop, restart, enable and disable commands.
 
-<!--DOCUSAURUS_CODE_TABS-->
-<!--Start-->
-```plaintext
-box start sonarr
-```
-<!--Stop-->
-```plaintext
-box stop sonarr
-```
-<!--Restart-->
-```plaintext
-box restart sonarr
-```
-<!--Enable-->
-```plaintext
-box enable sonarr
-```
-<!--Disable-->
-```plaintext
-box disable sonarr
-```
-<!--END_DOCUSAURUS_CODE_TABS-->
+import SystemdTabs from '../snippets/systemdtabs.mdx';
+
+<SystemdTabs service="radarr"/>
 
 ## Configuration
 
-Out of the box, Sonarr comes with very little configuration. Following are some basic tasks to help get your client up and running:
+Out of the box, Radarr comes with very little configuration. Following are some basic tasks to help get your client up and running:
 
 ### Add a new show (and your first root directory)
 
 1. At the top, click series.
-2. Click the button `+ Add Series`
+2. Click the button `+ Add Movie`
 3. Type the name of the show you want to add
 4. Under `Path`, choose `Add a new path`. Enter the path for the folder you wish to add your Sonarr shows to and click the green checkmark to add the directory.
-  - e.g. `"/home/<username>/media/TV Shows"`
+  - e.g. `/home/<username>/media/Movies`
 5. Change the other settings to your own needs
 6. Click the green + to add the show.
 
 ### Connect download clients
 To add a download client, go to `Settings > Download Client`. Make sure `Advanced Settings` are shown and click `Add Client`.
 
-<!--DOCUSAURUS_CODE_TABS-->
-<!--rTorrent-->
+#### rTorrent
 ```plaintext
 Name: rTorrent
 rTorrent host: 127.0.0.1
@@ -77,23 +56,23 @@ URL Path: /rutorrent/plugins/httprpc/action.php
 Use SSL: ON
 Username: <your username>
 Password: <your password>
-Add label to torrent: TV (or anything else you desire)
+Add label to torrent: Movies (or anything else you desire)
 Optional - Downloaded files location: <custom directory>
-NOTE: If you have errors adding rTorrent to Sonarr, please try going to Settings > General and disable certificate validation for localhost addresses
+NOTE: If you have errors adding rTorrent to Radarr, please try going to Settings > General and disable certificate validation for localhost addresses
 ```
 
-<!--Deluge (via Web)-->
+#### Deluge (via Web)
 ```plaintext
 Name: Deluge
 Host: 127.0.0.1
 Post: <deluge web port>
 Deluge Password: <your password>
-Add label to torrent: TV (or anything else you desire)
+Add label to torrent: Movies (or anything else you desire)
 * label plugin must be enabled in Deluge if you add a label
 SSL: OFF
 ```
 
-<!--nzbGet-->
+#### NZBGet
 ```plaintext
 NZBget host: 127.0.0.1
 port: 443
@@ -101,15 +80,14 @@ URL Base: nzbget
 Connect using HTTPS: ON
 nzbget username: <your username>
 nzbget Password: <your password>
-Add label to torrent: Series (or anything else you desire)
+Add label to torrent: Movies (or anything else you desire)
 * label must exist under "Categories" in nzbGet
 ```
-<!--END_DOCUSAURUS_CODE_TABS-->
 
-Since Sonarr v3, you will now need to disable certificate validation for localhost domains as well if you are connecting to port 443. You can find this setting in **Settings > General**.
+Since Radarr v3, you will now need to disable certificate validation for localhost domains as well if you are connecting to port 443. You can find this setting in **Settings > General**.
 
 ### Add an indexer with Jackett
-Sonarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.md). To add an indexer with Jackett, use the following steps.
+Radarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.md). To add an indexer with Jackett, use the following steps.
 
 :::note
 By default, when receivng the torznab feed from Jackett, it will need to be modified to be connected with the application. The default link looks like:
@@ -137,4 +115,4 @@ API: <copy and paste from jackett UI>
 
 ### Other tasks
 
-You may wish to further alter your setup by setting quality profiles or setting up post-processing so that media is automatically transferred to your Sonarr library when your torrents are completed. If you need further help, you can refer to the [Sonarr Wiki](https://github.com/Sonarr/Sonarr/wiki).
+You may wish to further alter your setup by setting quality profiles or setting up post-processing so that media is automatically transferred to your Radarr library when your torrents are completed. If you need further help, you can refer to the [Radarr Wiki](https://github.com/Radarr/Radarr/wiki).
