Fix wrong links

--- a/docs/applications/jackett.mdx
+++ b/docs/applications/jackett.mdx
@@ -16,7 +16,7 @@ Installing Jackett is easy. Simply issue the following command:
 box install jackett
 ```
 
-This command will configure jackett for your user. When finished, the installer will display the port that has been configured for Jackett. Don't forget this! This port will be important when you connect applications such as [Sonarr](sonarr.md) and [Radarr](radarr.md) to the trackers you have setup in Jackett.
+This command will configure jackett for your user. When finished, the installer will display the port that has been configured for Jackett. Don't forget this! This port will be important when you connect applications such as [Sonarr](sonarr.mdx) and [Radarr](radarr.mdx) to the trackers you have setup in Jackett.
 
 ## How to Access
 
