--- a/docs/applications/radarr.mdx
+++ b/docs/applications/radarr.mdx
@@ -87,7 +87,7 @@ Add label to torrent: Movies (or anything else you desire)
 Since Radarr v3, you will now need to disable certificate validation for localhost domains as well if you are connecting to port 443. You can find this setting in **Settings > General**.
 
 ### Add an indexer with Jackett
-Radarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.md). To add an indexer with Jackett, use the following steps.
+Radarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.mdx). To add an indexer with Jackett, use the following steps.
 
 :::note
 By default, when receivng the torznab feed from Jackett, it will need to be modified to be connected with the application. The default link looks like:
