--- a/docs/applications/lidarr.mdx
+++ b/docs/applications/lidarr.mdx
@@ -46,8 +46,7 @@ Out of the box, Lidarr comes with very little configuration. Following are some 
 ### Connect download clients
 To add a download client, go to `Settings > Download Client`. Make sure `Advanced Settings` are shown and click `Add Client`.
 
-<!--DOCUSAURUS_CODE_TABS-->
-<!--rTorrent-->
+#### rTorrent
 ```plaintext
 Name: rTorrent
 rTorrent host: 127.0.0.1
@@ -60,7 +59,7 @@ Optional - Downloaded files location: <custom directory>
 NOTE: If you have errors adding rTorrent to Lidarr, please try going to Settings > General and disable certificate validation for localhost addresses
 ```
 
-<!--Deluge (via Web)-->
+#### Deluge (via Web)
 ```plaintext
 Name: Deluge
 Host: 127.0.0.1
@@ -71,7 +70,7 @@ Add label to torrent: Music (or anything else you desire)
 SSL: OFF
 ```
 
-<!--nzbGet-->
+#### nzbGet
 ```plaintext
 NZBget host: 127.0.0.1
 port: 443
@@ -82,10 +81,10 @@ nzbget Password: <your password>
 Add label to torrent: Music (or anything else you desire)
 * label must exist under "Categories" in nzbGet
 ```
-<!--END_DOCUSAURUS_CODE_TABS-->
+
 
 ### Add an indexer with Jackett
-Lidarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.md). To add an indexer with Jackett, use the following steps.
+Lidarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.mdx). To add an indexer with Jackett, use the following steps.
 
 :::note
 By default, when receivng the torznab feed from Jackett, it will need to be modified to be connected with the application. The default link looks like:
