Push latest tab fix

--- a/docs/applications/basics.mdx
+++ b/docs/applications/basics.mdx
@@ -32,28 +32,9 @@ Please be aware that removing a package will remove **all** associated data with
 
 All box configured applications can be managed with start, stop, restart, enable and disable commands.
 
-<!--DOCUSAURUS_CODE_TABS-->
-<!--Start-->
-```plaintext
-box start btsync
-```
-<!--Stop-->
-```plaintext
-box stop btsync
-```
-<!--Restart-->
-```plaintext
-box restart btsync
-```
-<!--Enable-->
-```plaintext
-box enable btsync
-```
-<!--Disable-->
-```plaintext
-box disable btsync
-```
-<!--END_DOCUSAURUS_CODE_TABS-->
+import SystemdTabs from '../snippets/systemdtabs.mdx';
+
+<SystemdTabs service="btsync"/>
 
 :::tip
 Enable and disable refer to whether or not the package should be started when the server is booted. `enable` means start at boot and `disable` means remove it auto start entries.
