--- a/docs/appslots/getting-started/abuse.mdx
+++ b/docs/appslots/getting-started/abuse.mdx
@@ -3,13 +3,15 @@ id: abuse
 title: Abuse handling
 sidebar_label: Abuse handling
 ---
+
 We kindly want to remind you that our app range is a shared service, this means you are sharing the server with other users - Do not expect to be able to use all of the CPU/RAM on the server.
 A one (1) warning system has been put in place, if you as a client keep abusing services in a way that degrades the experience for other users on the server then you will only be issued a single warning, if the behaviour does not stop then we will be forced to terminate the account.
 
 Below is a short list of items that you cannot do.
+
 1. Send spam from our servers in any way
 2. Use our servers to portscan/bruteforce or otherwise attack other hosts
 3. Any kind of mining software
 4. Any kind of PLEX reselling (Plex shares)
-5. No hosting of offenssive content 
-The above list is to be updated, always refer to the acceptable use policy for a larger overview
+5. No hosting of offensive content 
+   The above list is to be updated, always refer to the acceptable use policy for a larger overview
