--- a/docs/appslots/applications/lidarr.mdx
+++ b/docs/appslots/applications/lidarr.mdx
@@ -22,14 +22,13 @@ This command will configure lidarr for your user.
 
 Once setup, lidarr will be available at the link `https://<hostname.io>/lidarr`
 
-
 ## Service Management
 
 Like all box configured applications, you can manage Lidarr via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="lidarr"/>
+<SystemdTabs service="lidarr" />
 
 ## Configuration
 
@@ -44,46 +43,13 @@ Out of the box, Lidarr comes with very little configuration. Following are some 
 5. Click `Add <Artist Name>`
 
 ### Connect download clients
-To add a download client, go to `Settings > Download Client`. Make sure `Advanced Settings` are shown and click `Add Client`.
 
-#### rTorrent
-```plaintext
-Name: rTorrent
-rTorrent host: 127.0.0.1
-URL Path: /rutorrent/plugins/httprpc/action.php
-Use SSL: ON
-Username: <your username>
-Password: <your password>
-Add label to torrent: Music (or anything else you desire)
-Optional - Downloaded files location: <custom directory>
-NOTE: If you have errors adding rTorrent to Lidarr, please try going to Settings > General and disable certificate validation for localhost addresses
-```
+import Clients from "../snippets/clients.mdx";
 
-#### Deluge (via Web)
-```plaintext
-Name: Deluge
-Host: 127.0.0.1
-Post: <deluge web port>
-Deluge Password: <your password>
-Add label to torrent: Music (or anything else you desire)
-* label plugin must be enabled in Deluge if you add a label
-SSL: OFF
-```
-
-#### nzbGet
-```plaintext
-NZBget host: 127.0.0.1
-port: 443
-URL Base: nzbget
-Connect using HTTPS: ON
-nzbget username: <your username>
-nzbget Password: <your password>
-Add label to torrent: Music (or anything else you desire)
-* label must exist under "Categories" in nzbGet
-```
-
+<Clients />
 
 ### Add an indexer with Jackett
+
 Lidarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.mdx). To add an indexer with Jackett, use the following steps.
 
 :::note
@@ -98,16 +64,19 @@ We need to edit this link to **remove https** and **add the port number**. Thus,
 ```plaintext
 http://app02.seedbox.io:12345/jackett/api/v2.0/indexers/yourtracker/results/torznab/
 ```
+
 :::
 
 1. Go to `Settings > Indexers` and click `+` to add a new indexer.
 2. Under `Torrent` choose `Torznab`
 3. Use the settings:
+
 ```plaintext main
 Name: <tracker name>
 URL: <click copy torznab feed in jackett and modify as per above>
 API: <copy and paste from jackett UI>
 ```
+
 4. Click `Test`. If all is good, click `Save`.
 
 ### Other tasks
