--- a/docs/appslots/applications/sonarr.mdx
+++ b/docs/appslots/applications/sonarr.mdx
@@ -22,14 +22,13 @@ This command will configure sonarr for your user.
 
 Once setup, sonarr will be available at the link `https://<hostname.io>/sonarr`
 
-
 ## Service Management
 
 Like all box configured applications, you can manage Sonarr via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="sonarr"/>
+<SystemdTabs service="sonarr" />
 
 ## Configuration
 
@@ -41,53 +40,22 @@ Out of the box, Sonarr comes with very little configuration. Following are some 
 2. Click the button `+ Add Series`
 3. Type the name of the show you want to add
 4. Under `Path`, choose `Add a new path`. Enter the path for the folder you wish to add your Sonarr shows to and click the green checkmark to add the directory.
-  - e.g. `"/home/<username>/media/TV Shows"`
+
+- e.g. `"/home/<username>/media/TV Shows"`
+
 5. Change the other settings to your own needs
 6. Click the green + to add the show.
 
 ### Connect download clients
-To add a download client, go to `Settings > Download Client`. Make sure `Advanced Settings` are shown and click `Add Client`.
 
-#### rTorrent
-```plaintext
-Name: rTorrent
-rTorrent host: 127.0.0.1
-Port: 443
-URL Path: /rutorrent/plugins/httprpc/action.php
-Use SSL: ON
-Username: <your username>
-Password: <your password>
-Add label to torrent: TV (or anything else you desire)
-Optional - Downloaded files location: <custom directory>
-NOTE: If you have errors adding rTorrent to Sonarr, please try going to Settings > General and disable certificate validation for localhost addresses
-```
+import Clients from "../snippets/clients.mdx";
 
-#### Deluge (via Web)
-```plaintext
-Name: Deluge
-Host: 127.0.0.1
-Post: <deluge web port>
-Deluge Password: <your password>
-Add label to torrent: TV (or anything else you desire)
-* label plugin must be enabled in Deluge if you add a label
-SSL: OFF
-```
-
-#### nzbGet
-```plaintext
-NZBget host: 127.0.0.1
-port: 443
-URL Base: nzbget
-Connect using HTTPS: ON
-nzbget username: <your username>
-nzbget Password: <your password>
-Add label to torrent: Series (or anything else you desire)
-* label must exist under "Categories" in nzbGet
-```
+<Clients />
 
 Since Sonarr v3, you will now need to disable certificate validation for localhost domains as well if you are connecting to port 443. You can find this setting in **Settings > General**.
 
 ### Add an indexer with Jackett
+
 Sonarr only supports a few trackers out of the box, but the indexers can be expanded by using the application [Jackett](jackett.mdx). To add an indexer with Jackett, use the following steps.
 
 :::note
@@ -102,16 +70,19 @@ We need to edit this link to **remove https** and **add the port number**. Thus,
 ```plaintext
 http://app02.seedbox.io:12345/jackett/api/v2.0/indexers/yourtracker/results/torznab/
 ```
+
 :::
 
 1. Go to `Settings > Indexers` and click `+` to add a new indexer.
 2. Under `Torrent` choose `Torznab`
 3. Use the settings:
+
 ```plaintext main
 Name: <tracker name>
 URL: <click copy torznab feed in jackett and modify as per above>
 API: <copy and paste from jackett UI>
 ```
+
 4. Click `Test`. If all is good, click `Save`.
 
 ### Other tasks
